--- a/beaker.conf
+++ b/beaker.conf
@@ -1,7 +1,8 @@
 [bottle]
-DEBUG = True
-BOTTLE_PORT = 5000
+DEBUG = False
+BOTTLE_PORT = 5001
 BOTTLE_HOST = 0.0.0.0
 SERVER_MIDDLEWARE = gunicorn
-WORKERS = 4
+WORKERS = 2
 REQUEST_MAX_SIZE = 10485760
+OSRA_BINARIES_LOCATION = /usr/bin/osra
