--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
 name: chembl-beaker
 channels:
 - defaults
-- conda-forge
+- rdkit
+- bioconda
+- chembl
 dependencies:
 - pillow==6.1.0
 - rdkit==2019.09.02
@@ -9,7 +11,9 @@ dependencies:
 - matplotlib==3.1.1
 - pycairo==1.18.1
 - chembl_structure_pipeline==1.0.0
-- bottle==0.12.18
-- WebTest==2.0.35
-- netaddr==0.7.19
-- gunicorn==20.0.4
+- pip:
+    - bottle==0.12.18
+    - netaddr==0.7.19
+    - pymongo==3.10
+    - WebTest==2.0
+    - gunicorn==20.0
